2008-07-25  Johan Dahlin  <johan@gnome.org>

	* gobject/Makefile.am:
	* tests/Makefile.am:
	Make distcheck pass

2008-07-25  Johan Dahlin  <johan@gnome.org>

	* gobject/gobjectmodule.c (init_gobject):
	* gobject/pygobject-private.h:
	Remove private structures which moved to pyglib.

2008-07-24  Johan Dahlin  <johan@gnome.org>

	Bug 544600 – pygobject building failed since 839 revision, 
	error : "Py_ssize_t" undeclared

	* glib/pyglib-private.h: Add backward compatibility macros for
	python 2.4.

	* gio/gfile.override:
	* gio/gfileenumerator.override:
	* gio/ginputstream.override:
	* gio/gio.defs:
	* gio/gio.override:
	* gio/goutputstream.override:
	* tests/test_gio.py:
	Wrap gio.File.copy, add tests and documentation.
	Rename PyGAsyncRequestNotify to PyGIONotify and reuse it.

2008-07-23  Johan Dahlin  <johan@gnome.org>

	* glib/pyglib.c (_pyglib_destroy_notify):
	Rename the function too, not just the prototype!

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_idle_add), (pyglib_timeout_add),
	(pyglib_timeout_add_seconds), (pyglib_io_add_watch):
	* glib/pyglib-private.h:
	* glib/pyglib.c (pyglib_destroy_notify), (_pyglib_handler_marshal):
	* glib/pyglib.h:
	* glib/pygsource.c (pyg_source_set_callback):
	Make pyglib_destroy_notify and pyglib_handler_marshal private.
	Add a few public prototypes.

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_idle_add), (pyglib_timeout_add),
	(pyglib_timeout_add_seconds), (pyglib_io_add_watch),
	(pyglib_source_remove), (pyglib_child_watch_add),
	(pyglib_markup_escape_text), (pyglib_get_current_time),
	(pyglib_main_depth), (pyglib_filename_display_name),
	(pyglib_filename_display_basename), (pyglib_filename_from_utf8),
	(pyglib_get_application_name), (pyglib_set_application_name),
	(pyglib_get_prgname), (pyglib_set_prgname), (pyglib_register_api),
	(pyglib_register_error):
	Mark as static, rename from pyg_* -> pyglib_*. Fill in api struct,